
----------------------------------------
Release Notes for TriBITS
----------------------------------------

2014/11/19:

(*) Added ${PROJECT_NAME}_TRACE_ADD_TEST: Now you can a single line print if a
test got added or not and if not then why.

2014/09/22:

(*) Changed minimum version of CMake from 2.7 to 2.8.11.

2014/09/21:

(*) Added support for the env var TRIBITS_TDD_USE_SYSTEM_CTEST so that if
equal to 1, then the TriBITS Dashboard Driver (TDD) system will use the CTest
(and CMake) in the env will be used instead of being downloaded using
download-cmake.py.  This not only speeds up the auotmated builds, but it also
ensures that the automated testing uses exactly the install of CMake/CTest
that is used by the developers on the system.  Also, it has been found that
download-cmake.py will download and install a 32bit version even on 64bit
machines.

Trilinos 11.7:
--------------

(*) Switched from the terms Primary Stable (PS) and Secondary Stable (SS) code
to Primary Tested (PT) and Secondary Tested (ST) according to the plan in the
TriBITS Lifecycle model.  Using 'PS' and 'SS' is still allowed but is
deprecated.  This also included deprecating the varible
<Project>_ENABLE_SECONDARY_STABLE_CODE and replacing it with
<Project>_ENABLE_SECONDARY_TEST_CODE.  Again, backward compatibility is
preserved.  Also, the checkin-test.py arg --ss-extra-builds is deprecated and
replaced with --st-extra-builds.


Trilinos 11.6:
--------------

(*) Changed behavior of <Project>_ENABLE_<PACKAGE>=ON to enable all
subpackages for that package including in propogating forward dependencies.
See updated <Project>BuildQuickRef.* document.


Trilinos 11.3:
--------------

(*) Added ENVIRONMENT env1=val1 env2=val2 ... argument to TRIBITS_ADD_TEST(),
TRIBITS_ADD_ADVANCED_TEST(), and TRIBITS_ADD_EXECUTABLE_AND_TEST().

(*) Fixed the generation of headers for explicit instantation system for
subpackages: Now subpackages that use the macro