@@ -622,9 +622,11 @@ FUNCTION(TRIBITS_ADD_ADVANCED_TEST TEST_NAME_IN)
   SET(TEST_EXE_LIST "")
 
   IF (PARSE_OVERALL_NUM_MPI_PROCS)
-    SET(TOTAL_NUM_PROCESSORS_USED ${PARSE_OVERALL_NUM_MPI_PROCS})
+    SET(MAX_NUM_MPI_PROCS_USED ${PARSE_OVERALL_NUM_MPI_PROCS})
+    SET(TOTAL_NUM_CORES_USED ${PARSE_OVERALL_NUM_MPI_PROCS})
   ELSE()
-    SET(TOTAL_NUM_PROCESSORS_USED 1)
+    SET(MAX_NUM_MPI_PROCS_USED ${PARSE_OVERALL_NUM_MPI_PROCS})
+    SET(TOTAL_NUM_CORES_USED 1)
   ENDIF()
 
   FOREACH( TEST_CMND_IDX RANGE ${MAX_NUM_TEST_CMND_IDX} )
@@ -681,12 +683,20 @@ FUNCTION(TRIBITS_ADD_ADVANCED_TEST TEST_NAME_IN)
         SET(PARSE_NUM_MPI_PROCS ${PARSE_OVERALL_NUM_MPI_PROCS})
         SET(NUM_MPI_PROC_VAR_NAME "OVERALL_NUM_MPI_PROCS")
       ENDIF()
+
       TRIBITS_ADD_TEST_GET_NUM_PROCS_USED("${PARSE_NUM_MPI_PROCS}"
         ${NUM_MPI_PROC_VAR_NAME}  NUM_PROCS_USED)
+
       IF (NUM_PROCS_USED LESS 0)
         SET(ADD_THE_TEST FALSE)
-      ELSEIF (NUM_PROCS_USED  GREATER  TOTAL_NUM_PROCESSORS_USED)
-        SET(TOTAL_NUM_PROCESSORS_USED ${NUM_PROCS_USED})
+      ENDIF()
+
+      IF (NUM_PROCS_USED  GREATER  TOTAL_NUM_CORES_USED)
+        SET(TOTAL_NUM_CORES_USED ${NUM_PROCS_USED})
+      ENDIF()
+
+      IF (NUM_PROCS_USED  GREATER  MAX_NUM_MPI_PROCS_USED)
+        SET(MAX_NUM_MPI_PROCS_USED ${NUM_PROCS_USED})
       ENDIF()
 
       IF(ADD_THE_TEST)
@@ -868,10 +878,6 @@ FUNCTION(TRIBITS_ADD_ADVANCED_TEST TEST_NAME_IN)
         -P "${TEST_SCRIPT_FILE}")
     ENDIF()
 
-    IF (${PROJECT_NAME}_TRACE_ADD_TEST)
-      MESSAGE_WRAPPER("-- ${TEST_NAME}: Added test!")
-    ENDIF()
-
     IF(PARSE_ADDED_TEST_NAME_OUT)
       SET(${PARSE_ADDED_TEST_NAME_OUT} ${TEST_NAME} PARENT_SCOPE )
     ENDIF()
@@ -887,9 +893,9 @@ FUNCTION(TRIBITS_ADD_ADVANCED_TEST TEST_NAME_IN)
 
     #This if clause will set the number of PROCESSORS to reserve during testing
     #to the number requested for the test.
-    IF(TOTAL_NUM_PROCESSORS_USED)
+    IF(TOTAL_NUM_CORES_USED)
       TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES
-        PROCESSORS "${TOTAL_NUM_PROCESSORS_USED}")
+        PROCESSORS "${TOTAL_NUM_CORES_USED}")
     ENDIF()
 
     IF (PARSE_FINAL_PASS_REGULAR_EXPRESSION)
@@ -904,15 +910,13 @@ FUNCTION(TRIBITS_ADD_ADVANCED_TEST TEST_NAME_IN)
         "OVERALL FINAL RESULT: TEST PASSED .${TEST_NAME}." )
     ENDIF()
 
-    IF (PARSE_TIMEOUT)
-      TRIBITS_SCALE_TIMEOUT(${PARSE_TIMEOUT} TIMEOUT_USED)
-      TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES TIMEOUT ${TIMEOUT_USED})
-    ENDIF()
+    TRIBITS_PRIVATE_ADD_TEST_SET_TIMEOUT(${TEST_NAME}  TIMEOUT_USED)
 
-    IF (PARSE_ENVIRONMENT)
-      TRIBITS_SET_TEST_PROPERTY(${TEST_NAME} PROPERTY ENVIRONMENT ${PARSE_ENVIRONMENT})
-    ENDIF()
+    TRIBITS_PRIVATE_ADD_TEST_SET_ENVIRONMENT(${TEST_NAME})
 
+    TRIBITS_PRIVATE_ADD_TEST_PRINT_ADDED(${TEST_NAME}
+      "${MAX_NUM_MPI_PROCS_USED}"  "${TOTAL_NUM_CORES_USED}"
+      "${TIMEOUT_USED}" )
   ELSE()
     GLOBAL_SET(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "")
   ENDIF()
