@@ -43,6 +43,7 @@ INCLUDE(TribitsAddExecutableTestHelpers)
 INCLUDE(ParseVariableArguments)
 INCLUDE(GlobalSet)
 INCLUDE(AppendGlobalSet)
+INCLUDE(AppendStringVarWithSep)
 INCLUDE(PrintVar)
 INCLUDE(AdvancedSet)
 INCLUDE(MessageWrapper)
@@ -522,7 +523,7 @@ ENDFUNCTION()
 # Set the pass/fail properties of a test that has already been added
 #
 
-MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_PASSFAIL_PROPERTIES TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_SET_PASSFAIL_PROPERTIES TEST_NAME_IN)
 
   # PASS_REGULAR_EXPRESSION
 
@@ -569,62 +570,86 @@ MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_PASSFAIL_PROPERTIES TEST_NAME_IN)
      "${FAIL_REGEX_STRINGS}")
   ENDIF()
 
-ENDMACRO()
+ENDFUNCTION()
 
 
 #
 # Set the timeout for a test already aded
 #
-MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_TIMEOUT  TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_SET_TIMEOUT  TEST_NAME_IN   TIMEOUT_USED_OUT)
 
   IF (PARSE_TIMEOUT)
     TRIBITS_SCALE_TIMEOUT("${PARSE_TIMEOUT}" TIMEOUT_USED)
     TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME_IN} PROPERTIES TIMEOUT ${TIMEOUT_USED})
+  ELSE()
+    SET(TIMEOUT_USED "")
   ENDIF()
 
-ENDMACRO()
+  SET(${TIMEOUT_USED_OUT} ${TIMEOUT_USED} PARENT_SCOPE)
+
+ENDFUNCTION()
 
 
 #
 # Set the environment for a test already aded
 #
-MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_ENVIRONMENT  TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_SET_ENVIRONMENT  TEST_NAME_IN)
 
   IF (PARSE_ENVIRONMENT)
     TRIBITS_SET_TEST_PROPERTY(${TEST_NAME_IN} PROPERTY ENVIRONMENT ${PARSE_ENVIRONMENT})
   ENDIF()
 
-ENDMACRO()
+ENDFUNCTION()
 
 
 #
 # Set the environment for a test already aded
 #
-MACRO(TRIBITS_PRIVATE_ADD_TEST_SET_PROCESSORS  TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_SET_PROCESSORS  TEST_NAME_IN  PROCESSORS_OUT)
 
   IF (PARSE_NUM_TOTAL_CORES_USED)
-    TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME_INSTANCE} PROPERTIES PROCESSORS
-      "${PARSE_NUM_TOTAL_CORES_USED}")
+    SET(PROCESSORS_USED "${PARSE_NUM_TOTAL_CORES_USED}")
   ELSEIF (NUM_PROCS_USED)
-    TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME_IN} PROPERTIES PROCESSORS
-      "${NUM_PROCS_USED_IN}")
+    SET(PROCESSORS_USED "${NUM_PROCS_USED_IN}")
   ENDIF()
+  TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME_IN} PROPERTIES PROCESSORS
+    "${PROCESSORS_USED}")
 
-ENDMACRO()
+  SET(${PROCESSORS_OUT} ${PROCESSORS_USED} PARENT_SCOPE)
+
+ENDFUNCTION()
 
 
 #
 # Print test added message!
 #
-MACRO(TRIBITS_PRIVATE_ADD_TEST_PRINT_ADDED  TEST_NAME_IN  NUM_MPI_PROCS_IN
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_PRINT_ADDED  TEST_NAME_IN  NUM_MPI_PROCS_IN
   PROCESSORS_IN  TIMEOUT_IN
   )
 
-  IF (${PROJECT_NAME}_TRACE_ADD_TEST)
-    MESSAGE_WRAPPER("-- ${TEST_NAME_IN}: Added test!")
+  SET(ADDED_TEST_PROPS "")
+  IF (NUM_MPI_PROCS_IN AND TPL_ENABLE_MPI)
+    APPEND_STRING_VAR_WITH_SEP(ADDED_TEST_PROPS
+      ", "  "NUM_MPI_PROCS=${NUM_MPI_PROCS_IN}")
+  ENDIF()
+  IF (PROCESSORS_IN)
+    APPEND_STRING_VAR_WITH_SEP(ADDED_TEST_PROPS
+      ", "  "PROCESSORS=${PROCESSORS_IN}")
+  ENDIF()
+  IF (TIMEOUT_IN)
+    APPEND_STRING_VAR_WITH_SEP(ADDED_TEST_PROPS
+      ", "  "TIMEOUT=${TIMEOUT_IN}")
   ENDIF()
 
-ENDMACRO()
+  IF (ADDED_TEST_PROPS)
+   SET(ADDED_TEST_PROPS " (${ADDED_TEST_PROPS})") 
+  ENDIF()
+
+  IF (${PROJECT_NAME}_TRACE_ADD_TEST)
+    MESSAGE_WRAPPER("-- ${TEST_NAME_IN}: Added test${ADDED_TEST_PROPS}!")
+  ENDIF()
+
+ENDFUNCTION()
 
 
 #
@@ -647,7 +672,8 @@ FUNCTION(TRIBITS_ADD_TEST_ADD_TEST_ALL  TEST_NAME_IN
     TRIBITS_ADD_TEST_ADD_TEST( ${TEST_NAME_IN} ${EXECUTABLE_PATH_IN} ${CMND_ARRAY} )
     SET(${ADDED_TEST_NAME_OUT} ${TEST_NAME_IN} PARENT_SCOPE)
 
-    TRIBITS_PRIVATE_ADD_TEST_POST_PROCESS_ADDED_TEST(${TEST_NAME_IN})
+    TRIBITS_PRIVATE_ADD_TEST_POST_PROCESS_ADDED_TEST(${TEST_NAME_IN}
+      ${NUM_PROCS_USED_IN})
 
   ELSE()
 
@@ -662,7 +688,7 @@ ENDFUNCTION()
 # Set the label and keywords
 #
 
-MACRO(TRIBITS_PRIVATE_ADD_TEST_ADD_LABEL_AND_KEYWORDS  TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_ADD_LABEL_AND_KEYWORDS  TEST_NAME_IN)
 
   TRIBITS_SET_TEST_PROPERTY(${TEST_NAME_IN} APPEND PROPERTY
     LABELS ${PARENT_PACKAGE_NAME})
@@ -672,19 +698,21 @@ MACRO(TRIBITS_PRIVATE_ADD_TEST_ADD_LABEL_AND_KEYWORDS  TEST_NAME_IN)
       LABELS ${PARSE_KEYWORDS})
   ENDIF()
 
-ENDMACRO()
+ENDFUNCTION()
 
 
 #
 # Postprocess a test that was added
 #
 
-MACRO(TRIBITS_PRIVATE_ADD_TEST_POST_PROCESS_ADDED_TEST  TEST_NAME_IN)
+FUNCTION(TRIBITS_PRIVATE_ADD_TEST_POST_PROCESS_ADDED_TEST  TEST_NAME_IN
+  NUM_PROCS_USED_IN
+  )
 
   TRIBITS_PRIVATE_ADD_TEST_SET_PASSFAIL_PROPERTIES(${TEST_NAME_IN})
-  TRIBITS_PRIVATE_ADD_TEST_SET_TIMEOUT(${TEST_NAME_IN})
   TRIBITS_PRIVATE_ADD_TEST_SET_ENVIRONMENT(${TEST_NAME_IN})
-  TRIBITS_PRIVATE_ADD_TEST_SET_PROCESSORS(${TEST_NAME_IN})
+  TRIBITS_PRIVATE_ADD_TEST_SET_PROCESSORS(${TEST_NAME_IN}  PROCESSORS_USED)
+  TRIBITS_PRIVATE_ADD_TEST_SET_TIMEOUT(${TEST_NAME_IN}  TIMEOUT_USED)
 
   IF(RUN_SERIAL_IN)
     TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME_IN} PROPERTIES RUN_SERIAL ON)
@@ -692,8 +720,9 @@ MACRO(TRIBITS_PRIVATE_ADD_TEST_POST_PROCESS_ADDED_TEST  TEST_NAME_IN)
 
   TRIBITS_PRIVATE_ADD_TEST_ADD_LABEL_AND_KEYWORDS(${TEST_NAME_IN})
 
-  TRIBITS_PRIVATE_ADD_TEST_PRINT_ADDED(${TEST_NAME_IN} "" "" "")
+  TRIBITS_PRIVATE_ADD_TEST_PRINT_ADDED(${TEST_NAME_IN}
+    "${NUM_PROCS_USED_IN}"  "${PROCESSORS_USED}"  "${TIMEOUT_USED}")
 
-ENDMACRO()
+ENDFUNCTION()
 
 
