@@ -237,7 +237,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_BASIC)
     )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST( # Don't capture unless I want to
     TRIBITS_SET_TEST_PROPERTIES_INPUT
@@ -250,7 +250,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_BASIC)
   TRIBITS_ADD_TEST( ${EXEN} HOST MyHost ADDED_TESTS_NAMES_OUT ${EXEN}_TEST_NAMES )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -293,7 +293,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_BASIC)
   TRIBITS_ADD_TEST( ${EXEN} XHOST MyHost ADDED_TESTS_NAMES_OUT ${EXEN}_TEST_NAMES )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -306,7 +306,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_BASIC)
   TRIBITS_ADD_TEST( ${EXEN} HOSTTYPE MyHostType ADDED_TESTS_NAMES_OUT ${EXEN}_TEST_NAMES )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -345,7 +345,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_BASIC)
   TRIBITS_ADD_TEST( ${EXEN} XHOSTTYPE MyHostType ADDED_TESTS_NAMES_OUT ${EXEN}_TEST_NAMES )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -528,7 +528,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_DISABLE)
     ADDED_TEST_NAME_OUT  SomeCmnd_TEST_NAME
     )
   UNITTEST_COMPARE_CONST(MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_SomeCmnd: Added test!")
+    "-- ${PACKAGE_NAME}_SomeCmnd: Added test (PROCESSORS=1)!")
   UNITTEST_COMPARE_CONST(SomeCmnd_TEST_NAME "${PACKAGE_NAME}_SomeCmnd")
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_ADVANCED_TEST_CMND_ARRAY_0
@@ -599,7 +599,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_CATEGORIES)
   TRIBITS_ADD_TEST( ${EXEN} )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -611,7 +611,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_CATEGORIES)
   TRIBITS_ADD_TEST( ${EXEN} )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -705,7 +705,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}: Added test!"
+    "-- ${PACKEXEN}: Added test (PROCESSORS=3)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -732,7 +732,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test!"
+    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test (NUM_MPI_PROCS=3, PROCESSORS=3)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -744,7 +744,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} ARGS "arg1 arg2" )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test!"
+    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test (NUM_MPI_PROCS=3, PROCESSORS=3)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -768,7 +768,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} ARGS "arg1 arg2" COMM mpi )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test!"
+    "-- ${PACKEXEN}_MPI_${MPI_EXEC_DEFAULT_NUMPROCS}: Added test (NUM_MPI_PROCS=3, PROCESSORS=3)!"
     )
   UNITTEST_COMPARE_CONST(
     TRIBITS_ADD_TEST_ADD_TEST_INPUT
@@ -862,7 +862,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} NUM_MPI_PROCS 1 NUM_TOTAL_CORES_USED 4 )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}_MPI_1: Added test!"
+    "-- ${PACKEXEN}_MPI_1: Added test (NUM_MPI_PROCS=1, PROCESSORS=4)!"
     )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKEXEN}_MPI_1;PROPERTIES;PROCESSORS;4")
@@ -876,7 +876,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_COMM)
   TRIBITS_ADD_TEST( ${EXEN} NUM_MPI_PROCS 1 NUM_TOTAL_CORES_USED 5 )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKEXEN}_MPI_1: Added test!"
+    "-- ${PACKEXEN}_MPI_1: Added test (NUM_MPI_PROCS=1, PROCESSORS=5)!"
     )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKEXEN}_MPI_1;PROPERTIES;PROCESSORS;5")
@@ -990,8 +990,14 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_PROPERTIES)
   SET(EXEN SomeExec)
   SET(PACKEXEN ${PACKAGE_NAME}_${EXEN})
 
+  # Turn on tracing for the rest of the tests!
+  SET(${PROJECT_NAME}_TRACE_ADD_TEST ON)
+  SET(MESSAGE_WRAPPER_UNIT_TEST_MODE TRUE)
+
   MESSAGE("Test setting of default properties")
   TRIBITS_ADD_TEST(${EXEN})
+  UNITTEST_COMPARE_CONST(MESSAGE_WRAPPER_INPUT
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_TEST_ADD_TEST_INPUT
     "${PACKEXEN};${CMAKE_CURRENT_BINARY_DIR}/${PACKEXEN}.exe"
     )
@@ -1003,11 +1009,15 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_PROPERTIES)
 
   MESSAGE("Test setting integer TIMEOUT with no scaling (not even defined)")
   TRIBITS_ADD_TEST(${EXEN} TIMEOUT 200)
+  UNITTEST_COMPARE_CONST(MESSAGE_WRAPPER_INPUT
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1, TIMEOUT=200)!" )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "PackageA_SomeExec;PROPERTIES;TIMEOUT;200")
 
   MESSAGE("Test setting non-integer TIMEOUT with no scaling (not even defined)")
   TRIBITS_ADD_TEST(${EXEN} TIMEOUT 200.50)
+  UNITTEST_COMPARE_CONST(MESSAGE_WRAPPER_INPUT
+    "-- ${PACKEXEN}: Added test (PROCESSORS=1, TIMEOUT=200.50)!" )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "PackageA_SomeExec;PROPERTIES;TIMEOUT;200.50")
   # NOTE: No truncation in TIMEOUT in this case!
@@ -1065,8 +1075,6 @@ FUNCTION(UNITEST_TRIBITS_ADD_TEST_PROPERTIES)
   TRIBITS_ADD_TEST(${EXEN} ENVIRONMENT var1=val1 var2=val2 )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "PackageA_SomeExec;PROPERTY;ENVIRONMENT;var1=val1;var2=val2")
-  # NOTE: 1.57 is truncated to 1.5 as part of the scaling algorithm
-  SET(${PROJECT_NAME}_SCALE_TEST_TIMEOUT 1.0)
 
   SET(TRIBITS_SET_TEST_PROPERTIES_CAPTURE_INPUT OFF)
 
@@ -1292,7 +1300,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_CATEGORIES)
   TRIBITS_ADD_ADVANCED_TEST( ${TEST_NAME} TEST_0 EXEC ${EXEN} )
   UNITTEST_COMPARE_CONST(
     MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_${TEST_NAME}: Added test!"
+    "-- ${PACKAGE_NAME}_${TEST_NAME}: Added test (PROCESSORS=1)!"
     )
   UNITTEST_FILE_REGEX(
     "${CMAKE_CURRENT_BINARY_DIR}/${PACKAGE_NAME}_${TEST_NAME}.cmake"
@@ -1758,7 +1766,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
   TRIBITS_ADD_ADVANCED_TEST( TAAT_mpi_cmnd_0_cmnd_1
     TEST_0 CMND someCmnd TEST_1 CMND someOtherCmnd )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1: Added test (PROCESSORS=1)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1;PROPERTIES;PROCESSORS;1")
@@ -1768,7 +1776,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
   TRIBITS_ADD_ADVANCED_TEST( TAAT_mpi_cmnd_0_cmnd_1
     OVERALL_NUM_MPI_PROCS 2 TEST_0 CMND someCmnd TEST_1 CMND someOtherCmnd )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1: Added test (NUM_MPI_PROCS=2, PROCESSORS=2)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_cmnd_1;PROPERTIES;PROCESSORS;2")
@@ -1779,7 +1787,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
     OVERALL_NUM_MPI_PROCS 2 # Set as the default PROCESSORS
     TEST_0 CMND someCmnd TEST_1 EXEC someExec NUM_MPI_PROCS 4 )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test (NUM_MPI_PROCS=4, PROCESSORS=4)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1;PROPERTIES;PROCESSORS;4")
@@ -1790,7 +1798,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
     OVERALL_NUM_MPI_PROCS 2 # Set as the default PROCESSORS
     TEST_0 EXEC someExec0 NUM_MPI_PROCS 4 TEST_1 EXEC someExec1 NUM_MPI_PROCS 3 )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test (NUM_MPI_PROCS=4, PROCESSORS=4)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1;PROPERTIES;PROCESSORS;4")
@@ -1801,7 +1809,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
     OVERALL_NUM_MPI_PROCS 2 # Set as the default PROCESSORS
     TEST_0 EXEC someExec0 NUM_MPI_PROCS 3 TEST_1 EXEC someExec1 NUM_MPI_PROCS 4 )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test (NUM_MPI_PROCS=4, PROCESSORS=4)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1;PROPERTIES;PROCESSORS;4")
@@ -1812,7 +1820,7 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_NUM_MPI_PROCS)
     OVERALL_NUM_MPI_PROCS 5 # Set as the default PROCESSORS
     TEST_0 EXEC someExec0 NUM_MPI_PROCS 3 TEST_1 EXEC someExec1 NUM_MPI_PROCS 4 )
   UNITTEST_COMPARE_CONST( MESSAGE_WRAPPER_INPUT
-    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test!" )
+    "-- ${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1: Added test (NUM_MPI_PROCS=5, PROCESSORS=5)!" )
   UNITTEST_COMPARE_CONST(TRIBITS_ADD_ADVANCED_TEST_NUM_CMNDS "2")
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "${PACKAGE_NAME}_TAAT_mpi_cmnd_0_exec_1;PROPERTIES;PROCESSORS;5")
@@ -1954,6 +1962,10 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_PROPERTIES)
   SET(PACKEXEN ${PACKAGE_NAME}_${EXEN}.exe)
   SET(CMNDN someCmnd)
 
+  # Turn on tracing for the rest of the tests!
+  SET(${PROJECT_NAME}_TRACE_ADD_TEST ON)
+  SET(MESSAGE_WRAPPER_UNIT_TEST_MODE TRUE)
+
   MESSAGE("Test setting default properites")
   TRIBITS_ADD_ADVANCED_TEST_UNITTEST_RESET()
   TRIBITS_ADD_ADVANCED_TEST( TAAT_basic_cmnd_1_args_0
@@ -1972,6 +1984,8 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_PROPERTIES)
   TRIBITS_ADD_ADVANCED_TEST_UNITTEST_RESET()
   TRIBITS_ADD_ADVANCED_TEST( TAAT_basic_cmnd_1_args_0
     TEST_0 CMND ${CMNDN} TIMEOUT 333.0 )
+  UNITTEST_COMPARE_CONST(MESSAGE_WRAPPER_INPUT
+    "-- PackageA_TAAT_basic_cmnd_1_args_0: Added test (PROCESSORS=1, TIMEOUT=333.0)!" )
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "PackageA_TAAT_basic_cmnd_1_args_0;PROPERTIES;TIMEOUT;333.0")
 
@@ -1983,6 +1997,13 @@ FUNCTION(UNITEST_TRIBITS_ADD_ADVANCED_TEST_PROPERTIES)
   UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
     "PackageA_TAAT_basic_cmnd_1_args_0;PROPERTIES;TIMEOUT;300")
   SET(${PROJECT_NAME}_SCALE_TEST_TIMEOUT 1.0)
+
+  MESSAGE("Test setting ENVIRONMENT")
+  TRIBITS_ADD_ADVANCED_TEST_UNITTEST_RESET()
+  TRIBITS_ADD_ADVANCED_TEST( TAAT_basic_cmnd_1_args_0
+    TEST_0 CMND ${CMNDN} ENVIRONMENT var1=val1 var2=val2 )
+  UNITTEST_HAS_SUBSTR_CONST(TRIBITS_SET_TEST_PROPERTIES_INPUT
+    "PackageA_TAAT_basic_cmnd_1_args_0;PROPERTY;ENVIRONMENT;var1=val1;var2=val2")
 
   SET(TRIBITS_SET_TEST_PROPERTIES_CAPTURE_INPUT OFF)
   SET(TRIBITS_ADD_ADVANCED_TEST_SKIP_SCRIPT OFF)
@@ -2485,4 +2506,4 @@ MESSAGE("*** Determine final result of all unit tests")
 MESSAGE("***\n")
 
 # Pass in the number of expected tests that must pass!
-UNITTEST_FINAL_RESULT(339)
+UNITTEST_FINAL_RESULT(345)
